objects/Budget__c.object
<CustomObject>
    <description>R5 - New Custom Object -Financial Target and Expectation Budgets</description>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year__c</fullName>
        <description>R5 - Account Plan Year</description>
        <label>Sales Targets &amp; Results Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R5 - Master Detail Relationship with Account Plan</description>
        <inlineHelpText>Description of the Account Plan  such that other users can understand the scope.</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Deviation_KUSD__c</fullName>
        <formula>IF (Target_Sales_MUSD__c == 0 &amp;&amp; Actual_Sales_USD__c &gt; 0, 1, IF(Target_Sales_to_Month_KUSD__c&lt;&gt;0,Actual_Sales_USD__c / Target_Sales_to_Month_KUSD__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Percentage of Target is being calculated as a linear deviation of the Actual Sales and Sales Targets according to the current Month of the Year.</inlineHelpText>
        <label>Percent of Target Sales Month to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_USD__c</fullName>
        <description>R5 - Actual Sales USD</description>
        <inlineHelpText>Current Sales as per the Account Plan timeline</inlineHelpText>
        <label>Actual Sales KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Automatic_Sync_Technical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of R8 - CR (C191316)</description>
        <label>Automatic Sync Technical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of R8 - CR (C191316)</description>
        <inlineHelpText>Update &apos;Actual Sales&apos; value automatically, based on the up-to-date Atlas data.</inlineHelpText>
        <label>Automatic Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Market_CAPEX_MUSD__c</fullName>
        <description>R5 - Available Market CAPEX MUSD</description>
        <inlineHelpText>ABB Available Account Capital Expenditures for the Product types in this Account Plan</inlineHelpText>
        <label>Available Account CAPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Market_OPEX_MUSD__c</fullName>
        <description>R5 - Available Market OPEX MUSD</description>
        <inlineHelpText>ABB Available Account Operational Expenditures for the Product types in this Account Plan</inlineHelpText>
        <label>Available Account OPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Spend_MUSD_1_c__c</fullName>
        <description>R5 - Available Spend MUSD</description>
        <formula>Available_Market_CAPEX_MUSD__c	+ Available_Market_OPEX_MUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of the available CAPEX and OPEX spend</inlineHelpText>
        <label>Available Spend KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Budget_USD__c</fullName>
        <description>R5 - Backup Budget USD</description>
        <label>Backup Budget USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Backup__c</fullName>
        <label>Business Unit Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>R5 - Business Unit</description>
        <inlineHelpText>Select ABB Business Unit from the picklist</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>EPCO - EP Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDS - Distribution Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIN - GEIS Integration &amp; Synergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIP - Installation Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIS - EP Industrial Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSB - Smart Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSC - Small Country BU for EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSO - EP Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSP - Smart Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU - Sundry EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACO - IA Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAEN - Energy Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMA - Measurement &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMP - Marine &amp; Ports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPI - Process Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASC - Small Country BU for IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASU - Sundry IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATU - Turbocharging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOCO - MO Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODR - Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOMG - Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSC - Small Country BU for MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSU - Sundry MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCO - Power Grids Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA - Grid Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI - Grid Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV - High Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSC - Small Country BU for PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU - Sundry PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR - Transformers</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC 1885 - Free-type text area</description>
        <inlineHelpText>Free text to add notes</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 -  Country</description>
        <formula>TEXT(Account_Plan__r.Account__r.Primary_Address_Country__c )</formula>
        <inlineHelpText>Defaults to GIS Country for this Location</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Actual_Sales_last_update__c</fullName>
        <label>Date Actual Sales last update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Division_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Division Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R5 - Division</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Backup__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Backup__c</fullName>
        <formula>Product_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with Product Group</description>
        <inlineHelpText>The enter PG will automatically update both the assigned Division &amp; BU in the above fields for this particular PG</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 Product</description>
        <inlineHelpText>The enter Product Line will automatically update the assigned Division,  BU and PG in the above fields for this particular Product Line</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Level__c</fullName>
        <inlineHelpText>Segmentation Level must always match to the values entered on the fields DIV,BU,Product Group,Product. For Example;Choose &quot;Division&quot; on segmentation level and populate up to DIV drop down list.</inlineHelpText>
        <label>Segment Level</label>
        <picklist>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_of_Available_Wallet__c</fullName>
        <description>R5 - Share of available wallet</description>
        <formula>Share_of_Wallet_MUSD__c/Available_Spend_MUSD_1_c__c</formula>
        <inlineHelpText>ABB Orders / Total Available Account Spend</inlineHelpText>
        <label>Share of Available Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_MUSD__c</fullName>
        <description>R5 - Share of Wallet MUSD currency Value</description>
        <label>ABB Orders KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_Per__c</fullName>
        <description>R5 - Share of Wallet</description>
        <formula>(Share_of_Wallet_MUSD__c /  Total_Spend_MUSD_1__c )</formula>
        <inlineHelpText>ABB Orders / Total Account Spend</inlineHelpText>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Available_Share_of_Wallet__c</fullName>
        <description>BR 3415 - Target Share of Wallet _Sales Target and Results.</description>
        <formula>Target_Sales_MUSD__c/ Available_Spend_MUSD_1_c__c</formula>
        <inlineHelpText>Target Sales KUSD/Available spend KUSD</inlineHelpText>
        <label>Target Available Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Budget_USD__c</fullName>
        <description>R5 - Target Budget USD</description>
        <label>Target Budget USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Sales_MUSD__c</fullName>
        <description>R5 - Target Sales USD</description>
        <label>Target Sales KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Sales_to_Month_KUSD__c</fullName>
        <formula>IF((TEXT(Account_Plan_Year__c) = TEXT(YEAR(TODAY()))),
((MONTH(TODAY()) * Target_Sales_MUSD__c) / 12),
IF(VALUE(TEXT(Account_Plan_Year__c)) &lt; YEAR(TODAY()), 
Target_Sales_MUSD__c, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Sales Month to Date KUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Total_Share_of_Wallet__c</fullName>
        <description>BR 3415 - Target Share of Wallet _Sales Target and Results.</description>
        <formula>Target_Sales_MUSD__c/ Total_Spend_MUSD_1__c</formula>
        <inlineHelpText>Target Sales KUSD/Total Account spend KUSD</inlineHelpText>
        <label>Target Total Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Available_Account_Spend_Summary__c</fullName>
        <formula>HYPERLINK($Label.SYSTEM_ABB_SHAREPOINT_FACE_TRAINING_ACCOUNT_SPEND, $Label.SYSTEM_ACCOUNT_SPEND_AWARE, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total &amp; Available Account Spend Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Market_CAPEX_MUSD__c</fullName>
        <description>R5 - Total Market CAPEX MUSD</description>
        <inlineHelpText>Total Account Capital Expenditure for the Product types in this Account Plan</inlineHelpText>
        <label>Total Account CAPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Market_OPEX_MUSD__c</fullName>
        <description>R5 - Total Market OPEX MUSD</description>
        <inlineHelpText>Total Account Operational Expenditure for the Product types in this Account Plan</inlineHelpText>
        <label>Total Account OPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend_MUSD_1__c</fullName>
        <formula>Total_Market_CAPEX_MUSD__c + Total_Market_OPEX_MUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Account Spend KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <description>R5 Unique Check</description>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>of_Sales_Targets_and_Results__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Sales Targets and Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Targets and Results</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>Product_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SalesTargets-Results{0000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Targets and Results</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>Sales Target and Results for Portal Users without auto synch</description>
        <label>External</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ABB_Orders_MUSD_less_than_the_TotalSpend</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), Share_of_Wallet_MUSD__c &gt;= Total_Spend_MUSD_1__c)</errorConditionFormula>
        <errorMessage>“ABB Orders MUSD” must be less than the sum of “Total Account CAPEX MUSD” and &quot;Total Account OPEX MUSD&quot;&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_plan_year_comparison</fullName>
        <active>true</active>
        <description>R5</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), IF (TEXT(Account_Plan_Year__c) != NULL &amp;&amp; TEXT(Account_Plan__r.Account_Plan_Year__c) != NULL, VALUE(TEXT(Account_Plan_Year__c)) &lt; (VALUE(TEXT(Account_Plan__r.Account_Plan_Year__c))- 3), FALSE))</errorConditionFormula>
        <errorMessage>Sales Targets &amp; Results Year must be either greater than Account Plan Year or past three years from Account Plan Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Available_CAPEX_less_than_Total_CAPEX</fullName>
        <active>true</active>
        <description>R5 - Available Market CAPEX MUSD must be less than Total Market CAPEX MUSD.</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), Available_Market_CAPEX_MUSD__c &gt; Total_Market_CAPEX_MUSD__c)</errorConditionFormula>
        <errorDisplayField>Available_Market_CAPEX_MUSD__c</errorDisplayField>
        <errorMessage>Available Account CAPEX MUSD must be less than Total Account CAPEX MUSD!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Available_OPEX_less_than_Total_OPEX</fullName>
        <active>true</active>
        <description>R5 - Available Market OPEX MUSD must be less than Total Market OPEX MUSD.</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), Available_Market_OPEX_MUSD__c &gt; Total_Market_OPEX_MUSD__c)</errorConditionFormula>
        <errorDisplayField>Available_Market_OPEX_MUSD__c</errorDisplayField>
        <errorMessage>Available Account OPEX MUSD must be less than Total Account OPEX MUSD!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_edit_Actual_Sales_if_Sync_is_set</fullName>
        <active>true</active>
        <description>Created as part of R8 - CR (C191316)</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), NOT($Profile.Name = $Label.Sys_Admin_Profile_Name) &amp;&amp; Automatic_Sync__c &amp;&amp; NOT(Automatic_Sync_Technical__c) &amp;&amp; ISCHANGED( Actual_Sales_USD__c ))</errorConditionFormula>
        <errorDisplayField>Actual_Sales_USD__c</errorDisplayField>
        <errorMessage>Manual update of the field is not allowed when &apos;Automatic Sync&apos; is set as true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_editable_only_by_record_creator</fullName>
        <active>true</active>
        <description>Comments__c editable only by record (sales target and results) creator</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), ISCHANGED(Comments__c),($User.Id  &lt;&gt;  CreatedById))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Comments can be edited only by the record creator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Financial_Target_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Financial Target and Expectation.</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Segment_Level_Validation</fullName>
        <active>true</active>
        <description>R5: Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</description>
        <errorConditionFormula>AND( 
NOT($Setup.Validation_Override__c.Exclude__c), 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
OR(
            (TEXT(Business_Unit__c) != NULL &amp;&amp; TEXT(Segment_Level__c) == &apos;Division&apos;),
            (TEXT(Business_Unit__c) == NULL &amp;&amp; TEXT(Segment_Level__c) == &apos;Business Unit&apos;),
            ( (Product_Group__c != NULL || Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) == &apos;Division&apos; || TEXT(Segment_Level__c) == &apos;Business Unit&apos;)),
            ( (Product__c == NULL) &amp;&amp; TEXT(Segment_Level__c) == &apos;Product Line&apos;),
            ( (Product_Group__c == NULL) &amp;&amp; TEXT(Segment_Level__c) == &apos;Product Group&apos;),
            ( (Product_Group__c != NULL &amp;&amp; Product__c != NULL) &amp;&amp; TEXT(Segment_Level__c) != &apos;Product Line&apos;)))</errorConditionFormula>
        <errorMessage>Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</errorMessage>
    </validationRules>
</CustomObject>